--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -46,8 +46,13 @@
   /* border: 1px solid orange; */
   font-size: 50px;
   font-family: 'Bungee Outline', cursive;
+  color: rgb(51,51,51);
   text-align: center;
-  transition: background 0.3s linear;
+  transition: color 0.3s linear;
+}
+
+#p-ola b {
+  color: rgb(51,51,51);
 }
 
 #p-ola-black {
@@ -55,12 +60,12 @@
   font-size: 50px;
   font-family: 'Bungee Outline', cursive;
   text-align: center;
-  color: rgb(51,51,51);
-  transition: background 0.3s linear;
+  color: white;
+  transition: color 0.3s linear;
 }
 
 #p-ola-black b {
-  color: rgb(51,51,51);
+  color: white;
 }
 
 #div2-section-2 {
